tests/ui/const-generics/generic_const_exprs/different-fn.stderr
error[E0308]: mismatched types
  --> $DIR/different-fn.rs:10:5
   |
LL |     [0; size_of::<Foo<T>>()]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^ expected `size_of::<T>()`, found `size_of::<Foo<T>>()`
   |
   = note: expected constant `size_of::<T>()`
              found constant `size_of::<Foo<T>>()`

error: unconstrained generic constant
  --> $DIR/different-fn.rs:10:9
   |
LL |     [0; size_of::<Foo<T>>()]
   |         ^^^^^^^^^^^^^^^^^^^
   |
   = help: try adding a `where` bound using this expression: `where [(); size_of::<Foo<T>>()]:`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
